--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,5 +21,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.13.2",
 		"mongoose-aggregate-paginate-v2": "^1.1.4"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.9"
 	}
 }
